...
                    .size(48.dp)
                    .clip(CircleShape)
                    .background(Color(0xFFececec))
            ) {
                Icon(
                    imageVector = Icons.Default.ArrowBack,
                    contentDescription = "Voltar",
                    tint = Color.Black,
                    modifier = Modifier.size(28.dp)
                )
            }

            IconButton(
...
